fix: Fixed responsiveness on mobile devices

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -104,3 +104,47 @@ input::selection {
     background-color: $branding;
     color: $dark;
 }
+
+.footer {
+    width: 100%;
+    max-width: 690px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media only screen and (max-width: 600px) {
+        max-width: 90%;
+    }
+
+    img {
+        width: 25px;
+        cursor: pointer;
+        filter: grayscale(100%);
+        transition: filter 0.3s ease-in-out;
+
+        &:hover {
+            filter: none;
+        }
+    }
+
+    ul {
+        display: flex;
+        gap: 1rem;
+        list-style: none;
+        padding: 0;
+        text-align: center;
+    }
+
+    p {
+        color: #888;
+        font-size: 14px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .gyat {
+        width: 90%;
+        max-width: none;
+    }
+}
